[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/worldenv.gd" type="Script" id=1]
[ext_resource path="res://tester.png" type="Texture" id=2]
[ext_resource path="res://title.png" type="Texture" id=3]
[ext_resource path="res://mainscreenvisibilitysliders.gd" type="Script" id=4]
[ext_resource path="res://Assets/dogicapixelbold.ttf" type="DynamicFontData" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
adjustment_enabled = true

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[node name="mainscreenvisibility" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 619.0
color = Color( 0, 0, 0, 0.392157 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 508, 287 )
scale = Vector2( 3.6, 3.6 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 1, 300, 176 )

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 574.0
margin_top = 168.0
margin_right = 978.0
margin_bottom = 496.0
color = Color( 0.329412, 0.235294, 0.478431, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 585.0
margin_top = 175.0
margin_right = 968.0
margin_bottom = 489.0
color = Color( 0.478431, 0.454902, 0.745098, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 158.0
margin_top = 332.0
margin_right = 551.0
margin_bottom = 366.0
rect_pivot_offset = Vector2( 227, 15 )
color = Color( 0.541176, 0.521569, 0.807843, 0.462745 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 158.0
margin_top = 474.0
margin_right = 551.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 227, 15 )
color = Color( 0.541176, 0.521569, 0.807843, 0.462745 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 158.0
margin_top = 190.0
margin_right = 544.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 227, 15 )
color = Color( 0.541176, 0.521569, 0.807843, 0.462745 )

[node name="button6" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 341.5, 141 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="button11" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 340, 286 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="button12" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 340, 430 )
scale = Vector2( 5.04054, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="button10" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 353, 547 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="showcaser" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 777, 331 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="button8" type="Sprite" parent="."]
modulate = Color( 0.737255, 0.737255, 0.933333, 1 )
position = Vector2( 121, 53 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 113, 251, 74, 23 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 273.0
margin_top = 33.0
margin_right = 867.0
margin_bottom = 115.0
custom_fonts/normal_font = SubResource( 3 )
text = "Visibility Settings"

[node name="Control" type="Control" parent="."]
margin_left = 159.0
margin_top = 197.0
margin_right = 199.0
margin_bottom = 237.0
script = ExtResource( 4 )

[node name="brightnessSlider" type="HSlider" parent="Control"]
margin_right = 384.0
margin_bottom = 16.0
min_value = 0.01
max_value = 8.0
step = 0.05
value = 1.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/brightnessSlider"]
margin_left = 25.0
margin_top = -68.0
margin_right = 388.0
margin_bottom = 7.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
text = "Brightness (1)
"

[node name="contrastSlider" type="HSlider" parent="Control"]
margin_left = 1.0
margin_top = 143.0
margin_right = 385.0
margin_bottom = 159.0
min_value = 0.01
max_value = 8.0
step = 0.05
value = 1.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/contrastSlider"]
margin_left = 61.0
margin_top = -66.0
margin_right = 476.0
margin_bottom = 9.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
text = "Contrast (2)"

[node name="saturationSlider" type="HSlider" parent="Control"]
margin_left = 1.0
margin_top = 284.0
margin_right = 385.0
margin_bottom = 300.0
min_value = 0.01
max_value = 5.0
step = 0.05
value = 1.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/saturationSlider"]
margin_left = 27.0
margin_top = -63.0
margin_right = 364.0
margin_bottom = 12.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
text = "Saturation (3)"

[node name="Reset" type="TextureButton" parent="Control"]
margin_left = 93.0
margin_top = 322.0
margin_right = 302.0
margin_bottom = 378.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/Reset"]
margin_left = -19.0
margin_top = 15.0
margin_right = 275.0
margin_bottom = 60.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 5 )
text = "Reset (R)"

[node name="Return" type="TextureButton" parent="Control"]
margin_left = -143.0
margin_top = -172.0
margin_right = 66.0
margin_bottom = -116.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Return"]
margin_left = 34.0
margin_top = 21.0
margin_right = 204.0
margin_bottom = 61.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 6 )
text = "Back (esc)"

[connection signal="value_changed" from="Control/brightnessSlider" to="Control" method="_on_brightnessSlider_value_changed"]
[connection signal="value_changed" from="Control/contrastSlider" to="Control" method="_on_contrastSlider_value_changed"]
[connection signal="value_changed" from="Control/saturationSlider" to="Control" method="_on_saturationSlider_value_changed"]
[connection signal="pressed" from="Control/Reset" to="Control" method="_on_Reset_pressed"]
[connection signal="pressed" from="Control/Return" to="Control" method="_on_Return_pressed"]
